# lava-lamp

./: LICENSE  README.md  flake.nix  main.py  pyproject.toml  render.frag  requirements.txt  shell.nix
src/lava_lamp/: lava_lamp.py  noise.glsl  render.frag
